--- a/application/index/view/Bill/report.html
+++ b/application/index/view/Bill/report.html
@@ -41,7 +41,7 @@
     option = {
         title: {
             text: '财务报表',
-            subtext: '2017消费情况',
+            subtext: '2017财务消费情况',
             x: 'center'
         },
         tooltip: {
